Game/Game/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/Greenfoot.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/Applications/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Applications/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Applications/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/Applications/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/Applications/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/Applications/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Applications/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/Applications/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Applications/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/Applications/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Applications/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Applications/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/Applications/Greenfoot.app/Contents/Resources/Java/jna-4.2.0.jar:/Applications/Greenfoot.app/Contents/Resources/Java/jna-platform-4.2.0.jar:/Applications/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/Applications/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/Applications/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/Applications/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/Applications/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/Applications/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/dj_ketsing/Desktop/Trial/Desktop
-d
/Users/dj_ketsing/Desktop/Trial/Desktop/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/dj_ketsing/Desktop/Trial/Desktop/Pig.java
<---- end of javadoc command ---->
Loading source file /Users/dj_ketsing/Desktop/Trial/Desktop/Pig.java...
/Users/dj_ketsing/Desktop/Trial/Desktop/Pig.java:157: error: not a statement
        c
        ^
/Users/dj_ketsing/Desktop/Trial/Desktop/Pig.java:157: error: ';' expected
        c
         ^
2 errors
